fix bug on mobile screen width with timeline, update jamie stats

--- a/css/index.css
+++ b/css/index.css
@@ -3,3 +3,9 @@
 .social-icon {
     font-size: 26px;
 }
+
+@media only screen and (max-width: 768px) {
+    .timeline__item {
+        margin-bottom: 10px !important;
+    }
+}
